--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <p class="skills__description">Windows, Linux (NixOS, Fedora, ZorinOS)</p>
           </div>
           <button class="skills__toggle">
-            <span class="lang eng active">See more...</span>
+            <span class="lang en active">See more...</span>
             <span class="lang fr">Voir plus...</span>
           </button>
         </div>
