fix(index.html): fixing french trad

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               </h1>
               <p class="hero__description">
                 <span class="lang en active">I'm a computer science engineering student passionate about learning, coding, and creating useful applications.</span>
-                <span class="lang fr">Étudiant en école d’ingénieurs en informatique, passionné par apprendre, développer et créer des applications utiles.</span>
+                <span class="lang fr">Étudiant en école d’ingénieurs en informatique, motivé par l’apprentissage, passionné par le développement et la création d’applications utiles.</span>
               </p>
             </div>
           </div>
